--- a/package.json
+++ b/package.json
@@ -11,10 +11,9 @@
   "dependencies": {
     "@google/genai": "^1.10.0",
     "react": "^19.1.0",
-    "react-dom/client": "19.1.0-beta-26f2496093-20240514",
     "react-dom": "^19.1.0",
     "arktype": "1.0.28-alpha",
-    "monaco-editor": "0.49.0?worker"
+    "monaco-editor": "0.49.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
