--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -32,5 +32,6 @@ jobs:
       - run: npm ci
       - run: npm install eslint --no-save
       - run: npm run build
+      - run: npm test -- --run
       - run: npx eslint . --ext .ts,.tsx
       - run: npx tsc --noEmit
