docs: update env examples

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,11 @@
 GEMINI_API_KEY=your_key_here
 BACKEND_URL=http://localhost:8000
 
+# Agent configuration
+AGENT_MAX_CONCURRENT=2
+AGENT_TIMEOUT_MS=30000
+AGENT_RETRY_ATTEMPTS=3
+AGENT_ZERO_API_URL=http://localhost:3000
+# Enable verbose agent logging (true/false)
+AGENT_DEBUG=false
+
