feat: expose agent env vars in vite

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,9 @@
 # Example environment configuration
 GEMINI_API_KEY=your_key_here
 BACKEND_URL=http://localhost:8000
+AGENT_MAX_CONCURRENT=2
+AGENT_TIMEOUT_MS=10000
+AGENT_RETRY_ATTEMPTS=3
+AGENT_ZERO_API_URL=http://localhost:3000
+AGENT_DEBUG=false
 
