--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest",
+    "backend": "cd backend && uvicorn app.main:app --reload --port 8000"
   },
   "dependencies": {
     "@google/genai": "^1.10.0",
