Add agent concurrency and timeout config

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
 # Example environment configuration
 GEMINI_API_KEY=your_key_here
 BACKEND_URL=http://localhost:8000
+AGENT_MAX_CONCURRENT=2
+AGENT_TIMEOUT_MS=60000
+AGENT_RETRY_ATTEMPTS=1
 
