--- a/a2a/requirements.txt
+++ b/a2a/requirements.txt
@@ -1,6 +1,5 @@
 # A2A Protocol Core Dependencies
-a2a-python==0.1.0
-a2a-js==0.1.0
+# Custom A2A implementation - no external packages required
 
 # FastAPI for API endpoints
 fastapi==0.104.1
@@ -18,7 +17,7 @@ aiohttp==3.9.1
 
 # WebSocket Support
 websockets==12.0
-socketio==5.10.0
+python-socketio==5.10.0
 
 # Security and Cryptography
 cryptography==41.0.8
