--- a/package.json
+++ b/package.json
@@ -30,11 +30,10 @@
   },
   "dependencies": {
     "@google/genai": "^1.10.0",
-    "react": "^19.1.0",
-    "react-dom/client": "19.1.0-beta-26f2496093-20240514",
-    "react-dom": "^19.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "arktype": "1.0.28-alpha",
-    "monaco-editor": "0.49.0?worker"
+    "monaco-editor": "0.49.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
@@ -57,7 +56,7 @@
     "husky": "^8.0.3",
     "lint-staged": "^15.2.0",
     "npm-check-updates": "^16.14.17",
-    "typescript": "~5.7.2",
+    "typescript": "~5.3.3",
     "vite": "^6.2.0",
     "vitest": "^1.0.4",
     "@vitest/ui": "^1.0.4",
